--- a/themes/hexo-theme-matery/layout/_partial/bg-cover-content.ejs
+++ b/themes/hexo-theme-matery/layout/_partial/bg-cover-content.ejs
@@ -39,8 +39,8 @@
 <script>
     // 每天切换 banner 图.  Switch banner image every day.
     //var bannerUrl = "<%- theme.jsDelivr.url %><%- url_for('/medias/banner/') %>" + new Date().getDay() + '.jpg';
-    var bannerUrl = https://service-5z0sdahv-1306777571.sh.apigw.tencentcs.com/release/
-    $('.bg-cover').css('background-image', 'url(' + bannerUrl + ')');
+    //$('.bg-cover').css('background-image', 'url(' + bannerUrl + ')');
+    $('.bg-cover').css('background-image', 'url(https://api.yimian.xyz/img?type=wallpaper)');
 </script>
 <% } else { %>
 <script>
