--- a/themes/hexo-theme-matery/layout/_partial/head.ejs
+++ b/themes/hexo-theme-matery/layout/_partial/head.ejs
@@ -77,6 +77,7 @@
     <link rel="icon" type="<%= iconType %>" href="<%- theme.jsDelivr.url %><%- url_for(theme.favicon) %>">
     <%- partial('_partial/main-style') %>
 
+    <script src="/libs/waifu/autoload.js"></script>
     <script src="<%- theme.jsDelivr.url %><%- url_for(theme.libs.js.jquery) %>"></script>
 
 </head>
