--- a/themes/hexo-theme-matery/layout/_partial/post-cover.ejs
+++ b/themes/hexo-theme-matery/layout/_partial/post-cover.ejs
@@ -24,13 +24,24 @@ if (page.img) {
             : url_for(theme.featureImages[num]);
 }
 %>
-
 <div class="bg-cover pd-header post-cover" style="background-image: url('<%- featureimg %>')">
     <div class="container" style="right: 0px;left: 0px;">
         <div class="row">
             <div class="col s12 m12 l12">
                 <div class="brand">
-                    <h1 class="description center-align post-title"><%= page.title %></h1>
+                    <script src="<%- theme.jsDelivr.url %><%- url_for(theme.libs.js.typed) %>"></script>
+					<% if (theme.post.enable) { %>
+						<script>
+							var typedObj = new Typed("#post-title", {
+								strings: [ '<%= page.title %>' ],
+								startDelay: <%= theme.post.startDelay %>,
+								typeSpeed: <%= theme.post.typeSpeed %>,
+								loop: <%= theme.post.loop %>,
+								backSpeed: <%= theme.post.backSpeed %>,
+								showCursor: <%= theme.post.showCursor %>
+							});
+						</script>
+					<% } %>
                 </div>
             </div>
         </div>
