--- a/themes/hexo-theme-matery/source/css/matery.css
+++ b/themes/hexo-theme-matery/source/css/matery.css
@@ -241,11 +241,11 @@ mark {
 }
 
 .bg-color {
-    background-image: linear-gradient(to right, #4cbf30 0%, #0f9d58 100%);
+    background-image: linear-gradient(to right, #d998d0 0%, #c564d9 100%);
 }
 
 .text-color {
-    color: #0f9d58 !important;
+    color: #c564d9 !important;
 }
 
 .white-color {
@@ -257,7 +257,7 @@ mark {
     position: fixed;
     bottom: 0;
     z-index: 300;
-    background: linear-gradient(to right, #4cbf30 0%, #0f9d58 100%);
+    background: linear-gradient(to right, #d998d0 0%, #c564d9 100%);
     opacity: 0.8;
 }
 
@@ -550,10 +550,10 @@ header .go-back i {
     height: 40vh !important;
 }
 
-.bg-cover:after {
-    -webkit-animation: rainbow 60s infinite;
-    animation: rainbow 60s infinite;
-}
+//.bg-cover:after {
+//    -webkit-animation: rainbow 60s infinite;
+//    animation: rainbow 60s infinite;
+//}
 
 .bg-cover:before,
 .bg-cover:after {
@@ -597,45 +597,45 @@ header .go-back i {
 
     0%,
     100% {
-        background: rgba(156, 39, 176, 0.75);
-        background: linear-gradient(45deg, rgba(156, 39, 176, 0.75) 0%, rgba(156, 39, 176, 0.65) 100%);
-        background: -moz-linear-gradient(135deg, rgba(156, 39, 176, 0.75) 0%, rgba(156, 39, 176, 0.65) 100%);
-        background: -webkit-linear-gradient(135deg, rgba(156, 39, 176, 0.75) 0%, rgba(156, 39, 176, 0.65) 100%);
+        background: rgba(226, 57, 255, 0.31);
+        background: linear-gradient(45deg, rgba(226, 57, 255, 0.31) 0%, rgba(226, 57, 255, 0.24) 100%);
+        background: -moz-linear-gradient(135deg, rgba(226, 57, 255, 0.31) 0%, rgba(226, 57, 255, 0.24) 100%);
+        background: -webkit-linear-gradient(135deg, rgba(226, 57, 255, 0.31) 0%, rgba(226, 57, 255, 0.24) 100%);
     }
 
     16% {
-        background: rgba(132, 13, 121, 0.75);
-        background: linear-gradient(45deg, rgba(132, 13, 121, 0.75) 0%, rgba(132, 13, 121, 0.65) 100%);
-        background: -moz-linear-gradient(135deg, rgba(132, 13, 121, 0.75) 0%, rgba(132, 13, 121, 0.65) 100%);
-        background: -webkit-linear-gradient(135deg, rgba(132, 13, 121, 0.75) 0%, rgba(132, 13, 121, 0.65) 100%);
+        background: rgba(132, 13, 121, 0.31);
+        background: linear-gradient(45deg, rgba(132, 13, 121, 0.31) 0%, rgba(132, 13, 121, 0.24) 100%);
+        background: -moz-linear-gradient(135deg, rgba(132, 13, 121, 0.31) 0%, rgba(132, 13, 121, 0.24) 100%);
+        background: -webkit-linear-gradient(135deg, rgba(132, 13, 121, 0.31) 0%, rgba(132, 13, 121, 0.24) 100%);
     }
 
     32% {
-        background: rgba(239, 83, 80, 0.75);
-        background: linear-gradient(45deg, rgba(239, 83, 80, 0.75) 0%, rgba(239, 83, 80, 0.65) 100%);
-        background: -moz-linear-gradient(135deg, rgba(239, 83, 80, 0.75) 0%, rgba(239, 83, 80, 0.65) 100%);
-        background: -webkit-linear-gradient(135deg, rgba(239, 83, 80, 0.75) 0%, rgba(239, 83, 80, 0.65) 100%);
+        background: rgba(239, 83, 80, 0.31);
+        background: linear-gradient(45deg, rgba(239, 83, 80, 0.31) 0%, rgba(239, 83, 80, 0.24) 100%);
+        background: -moz-linear-gradient(135deg, rgba(239, 83, 80, 0.31) 0%, rgba(239, 83, 80, 0.24) 100%);
+        background: -webkit-linear-gradient(135deg, rgba(239, 83, 80, 0.31) 0%, rgba(239, 83, 80, 0.24) 100%);
     }
 
     48% {
-        background: rgba(255, 87, 34, 0.75);
-        background: linear-gradient(45deg, rgba(255, 87, 34, 0.75) 0%, rgba(255, 87, 34, 0.65) 100%);
-        background: -moz-linear-gradient(135deg, rgba(255, 87, 34, 0.75) 0%, rgba(255, 87, 34, 0.65) 100%);
-        background: -webkit-linear-gradient(135deg, rgba(255, 87, 34, 0.75) 0%, rgba(255, 87, 34, 0.65) 100%);
+        background: rgba(255, 87, 34, 0.31);
+        background: linear-gradient(45deg, rgba(255, 87, 34, 0.31) 0%, rgba(255, 87, 34, 0.24) 100%);
+        background: -moz-linear-gradient(135deg, rgba(255, 87, 34, 0.31) 0%, rgba(255, 87, 34, 0.24) 100%);
+        background: -webkit-linear-gradient(135deg, rgba(255, 87, 34, 0.31) 0%, rgba(255, 87, 34, 0.24) 100%);
     }
 
     64% {
-        background: rgba(255, 160, 0, 0.75);
-        background: linear-gradient(45deg, rgba(255, 160, 0, 0.75) 0%, rgba(255, 160, 0, 0.65) 100%);
-        background: -moz-linear-gradient(135deg, rgba(255, 160, 0, 0.75) 0%, rgba(255, 112, 66, 0.65) 100%);
-        background: -webkit-linear-gradient(135deg, rgba(255, 160, 0, 0.75) 0%, rgba(255, 160, 0, 0.65) 100%);
+        background: rgba(255, 160, 0, 0.31);
+        background: linear-gradient(45deg, rgba(255, 160, 0, 0.31) 0%, rgba(255, 160, 0, 0.24) 100%);
+        background: -moz-linear-gradient(135deg, rgba(255, 160, 0, 0.31) 0%, rgba(255, 112, 66, 0.24) 100%);
+        background: -webkit-linear-gradient(135deg, rgba(255, 160, 0, 0.31) 0%, rgba(255, 160, 0, 0.24) 100%);
     }
 
     80% {
-        background: rgba(233, 30, 99, 0.75);
-        background: linear-gradient(45deg, rgba(233, 30, 99, 0.75) 0%, rgba(233, 30, 99, 0.65) 100%);
-        background: -moz-linear-gradient(135deg, rgba(233, 30, 99, 0.75) 0%, rgba(233, 30, 99, 0.65) 100%);
-        background: -webkit-linear-gradient(135deg, rgba(2233, 30, 99, 0.75) 0%, rgba(233, 30, 99, 0.65) 100%);
+        background: rgba(233, 30, 99, 0.31);
+        background: linear-gradient(45deg, rgba(233, 30, 99, 0.31) 0%, rgba(233, 30, 99, 0.24) 100%);
+        background: -moz-linear-gradient(135deg, rgba(233, 30, 99, 0.31) 0%, rgba(233, 30, 99, 0.24) 100%);
+        background: -webkit-linear-gradient(135deg, rgba(2233, 30, 99, 0.31) 0%, rgba(233, 30, 99, 0.24) 100%);
     }
 }
 
@@ -643,45 +643,45 @@ header .go-back i {
 
     0%,
     100% {
-        background: rgba(156, 39, 176, 0.75);
-        background: linear-gradient(45deg, rgba(156, 39, 176, 0.75) 0%, rgba(156, 39, 176, 0.65) 100%);
-        background: -moz-linear-gradient(135deg, rgba(156, 39, 176, 0.75) 0%, rgba(156, 39, 176, 0.65) 100%);
-        background: -webkit-linear-gradient(135deg, rgba(156, 39, 176, 0.75) 0%, rgba(156, 39, 176, 0.65) 100%);
+        background: rgba(226, 57, 255, 0.31);
+        background: linear-gradient(45deg, rgba(226, 57, 255, 0.31) 0%, rgba(226, 57, 255, 0.24) 100%);
+        background: -moz-linear-gradient(135deg, rgba(226, 57, 255, 0.31) 0%, rgba(226, 57, 255, 0.24) 100%);
+        background: -webkit-linear-gradient(135deg, rgba(226, 57, 255, 0.31) 0%, rgba(226, 57, 255, 0.24) 100%);
     }
 
     16% {
-        background: rgba(132, 13, 121, 0.75);
-        background: linear-gradient(45deg, rgba(132, 13, 121, 0.75) 0%, rgba(132, 13, 121, 0.65) 100%);
-        background: -moz-linear-gradient(135deg, rgba(132, 13, 121, 0.75) 0%, rgba(132, 13, 121, 0.65) 100%);
-        background: -webkit-linear-gradient(135deg, rgba(132, 13, 121, 0.75) 0%, rgba(132, 13, 121, 0.65) 100%);
+        background: rgba(132, 13, 121, 0.31);
+        background: linear-gradient(45deg, rgba(132, 13, 121, 0.31) 0%, rgba(132, 13, 121, 0.24) 100%);
+        background: -moz-linear-gradient(135deg, rgba(132, 13, 121, 0.31) 0%, rgba(132, 13, 121, 0.24) 100%);
+        background: -webkit-linear-gradient(135deg, rgba(132, 13, 121, 0.31) 0%, rgba(132, 13, 121, 0.24) 100%);
     }
 
     32% {
-        background: rgba(239, 83, 80, 0.75);
-        background: linear-gradient(45deg, rgba(239, 83, 80, 0.75) 0%, rgba(239, 83, 80, 0.65) 100%);
-        background: -moz-linear-gradient(135deg, rgba(239, 83, 80, 0.75) 0%, rgba(239, 83, 80, 0.65) 100%);
-        background: -webkit-linear-gradient(135deg, rgba(239, 83, 80, 0.75) 0%, rgba(239, 83, 80, 0.65) 100%);
+        background: rgba(239, 83, 80, 0.31);
+        background: linear-gradient(45deg, rgba(239, 83, 80, 0.31) 0%, rgba(239, 83, 80, 0.24) 100%);
+        background: -moz-linear-gradient(135deg, rgba(239, 83, 80, 0.31) 0%, rgba(239, 83, 80, 0.24) 100%);
+        background: -webkit-linear-gradient(135deg, rgba(239, 83, 80, 0.31) 0%, rgba(239, 83, 80, 0.24) 100%);
     }
 
     48% {
-        background: rgba(255, 87, 34, 0.75);
-        background: linear-gradient(45deg, rgba(255, 87, 34, 0.75) 0%, rgba(255, 87, 34, 0.65) 100%);
-        background: -moz-linear-gradient(135deg, rgba(255, 87, 34, 0.75) 0%, rgba(255, 87, 34, 0.65) 100%);
-        background: -webkit-linear-gradient(135deg, rgba(255, 87, 34, 0.75) 0%, rgba(255, 87, 34, 0.65) 100%);
+        background: rgba(255, 87, 34, 0.31);
+        background: linear-gradient(45deg, rgba(255, 87, 34, 0.31) 0%, rgba(255, 87, 34, 0.24) 100%);
+        background: -moz-linear-gradient(135deg, rgba(255, 87, 34, 0.31) 0%, rgba(255, 87, 34, 0.24) 100%);
+        background: -webkit-linear-gradient(135deg, rgba(255, 87, 34, 0.31) 0%, rgba(255, 87, 34, 0.24) 100%);
     }
 
     64% {
-        background: rgba(255, 160, 0, 0.75);
-        background: linear-gradient(45deg, rgba(255, 160, 0, 0.75) 0%, rgba(255, 160, 0, 0.65) 100%);
-        background: -moz-linear-gradient(135deg, rgba(255, 160, 0, 0.75) 0%, rgba(255, 112, 66, 0.65) 100%);
-        background: -webkit-linear-gradient(135deg, rgba(255, 160, 0, 0.75) 0%, rgba(255, 160, 0, 0.65) 100%);
+        background: rgba(255, 160, 0, 0.31);
+        background: linear-gradient(45deg, rgba(255, 160, 0, 0.31) 0%, rgba(255, 160, 0, 0.24) 100%);
+        background: -moz-linear-gradient(135deg, rgba(255, 160, 0, 0.31) 0%, rgba(255, 112, 66, 0.24) 100%);
+        background: -webkit-linear-gradient(135deg, rgba(255, 160, 0, 0.31) 0%, rgba(255, 160, 0, 0.24) 100%);
     }
 
     80% {
-        background: rgba(233, 30, 99, 0.75);
-        background: linear-gradient(45deg, rgba(233, 30, 99, 0.75) 0%, rgba(233, 30, 99, 0.65) 100%);
-        background: -moz-linear-gradient(135deg, rgba(233, 30, 99, 0.75) 0%, rgba(233, 30, 99, 0.65) 100%);
-        background: -webkit-linear-gradient(135deg, rgba(2233, 30, 99, 0.75) 0%, rgba(233, 30, 99, 0.65) 100%);
+        background: rgba(233, 30, 99, 0.31);
+        background: linear-gradient(45deg, rgba(233, 30, 99, 0.31) 0%, rgba(233, 30, 99, 0.24) 100%);
+        background: -moz-linear-gradient(135deg, rgba(233, 30, 99, 0.31) 0%, rgba(233, 30, 99, 0.24) 100%);
+        background: -webkit-linear-gradient(135deg, rgba(2233, 30, 99, 0.31) 0%, rgba(233, 30, 99, 0.24) 100%);
     }
 }
 
@@ -1317,7 +1317,7 @@ thead {
 
 .chip-container .chip:hover {
     color: #fff;
-    background: linear-gradient(to right, #4cbf30 0%, #0f9d58 100%) !important;
+    background: linear-gradient(to right, #d998d0 0%, #c564d9 100%) !important;
 }
 
 .chip .tag-length {
@@ -1393,7 +1393,7 @@ thead {
     left: 18px;
     height: 100%;
     width: 4px;
-    background: #0f9d58;
+    background: #c564d9;
 }
 
 @media only screen and (min-width: 900px) {
@@ -1629,8 +1629,8 @@ thead {
     margin: 0 0.5rem;
     padding: 0;
     color: #fff;
-    border: 1px solid #0f9d58;
-    background: radial-gradient(#4cbf30, #0f9d58);
+    border: 1px solid #c564d9;
+    background: radial-gradient(#d998d0, #c564d9);
     font-size: 0.9rem;
     border-radius: 50%;
     box-shadow: 0 4px 6px rgba(50, 50, 93, .21), 0 2px 3px rgba(0, 0, 0, .1);
@@ -1806,8 +1806,8 @@ thead {
 
 .other-skills .chip:hover {
     color: #fff;
-    background: linear-gradient(to right, #4cbf30 0%, #0f9d58 100%);
-    border: 1px solid #4cbf30;
+    background: linear-gradient(to right, #d998d0 0%, #c564d9 100%);
+    border: 1px solid #d998d0;
     box-shadow: 0 5px 5px rgba(0, 0, 0, .25)
 }
 
@@ -2293,4 +2293,51 @@ body.DarkMode .theme-btn:hover {
     font-family:'Font Awesome 5 Free';
     font-weight: 900;
     color: #d9534f;
+}
+
+/*直达评论按钮样式*/
+.comment-scroll {
+    position: fixed;
+    right: 15px;
+    bottom: 135px;
+    padding-top: 15px;
+    margin-bottom: 0;
+    z-index: 998;
+}
+
+.comment-scroll .btn-floating {
+    background: linear-gradient(to bottom right, 
+#FF9999 0%, 
+#ff6666 100%);
+    width: 48px;
+    height: 48px;
+}
+
+.comment-scroll .btn-floating i {
+    line-height: 48px;
+    font-size: 1.8rem;
+}
+
+/* 滚动条 */
+::-webkit-scrollbar-thumb {
+    background-color: 
+#FF2A68;
+    background-image: -webkit-linear-gradient(45deg,
+rgba(255,255,255,.4) 25%,
+transparent 25%,
+transparent 50%,
+rgba(255,255,255,.4) 50%,
+rgba(255,255,255,.4) 75%,
+transparent 75%,
+transparent);
+    border-radius: 3em;
+}
+::-webkit-scrollbar-track {
+    background-color: 
+#ffcacaff;
+    border-radius: 3em;
+}
+::-webkit-scrollbar {
+    width: 8px;
+    height: 15px;
 }
