--- a/themes/hexo-theme-matery/layout/_partial/back-comment.ejs
+++ b/themes/hexo-theme-matery/layout/_partial/back-comment.ejs
@@ -1,6 +1,6 @@
 <!-- 直达评论 -->
 <div id="to_comment" class="comment-scroll">
-    <a class="btn-floating btn-large waves-effect waves-light" href="#waline" title="直达评论">
+    <a class="btn-floating btn-large waves-effect waves-light" href="#waline-card" title="直达评论">
         <i class="fas fa-comments"></i>
     </a>
 </div>
